fix test 401 password